# Server_for_lang_project

./: Подсказки  ЧИТАЙ ПЕРЕД РИЛИЗОМ!!!
server_for_lang_project/: CMakeLists.txt  CMakeLists.txt.user.80f4306  main.cpp
